# autograd

./: .gitmodules  CMakeLists.txt  README.md
include/: lib.hh
src/: CMakeLists.txt  lib.cc  main.cc
